<resources>
    <string name="app_name">American Football Score Keeper</string>
    <string name="team_a">Team A</string>
    <string name="team_a_score">0</string>
    <string name="team_b">Team B</string>
    <string name="team_b_score">0</string>
    <string name="td">+6 points (td)</string>
    <string name="fg">+3 points (fg)</string>
    <string name="p2">+2 points</string>
    <string name="pat">+1 point (pat)</string>
    <string name="reset">reset</string>
</resources>
